# rustboard

./: .gitignore  Cargo.toml  LICENSE  README.md  Rocket.toml  docker-compose.dev.yml  package.json  schema  tailwind.config.js
public/: style.css
src/: main.rs  utils.rs
src/api/: v1.rs
src/api/v1/: mod.rs  types.rs  utils.rs
src/db/: mod.rs  types.rs  utils.rs
src/db_fetch/: mod.rs  types.rs
src/routes/: context.rs  mod.rs  utils.rs
styles/: styles.css
templates/: base.tera  catcher.html.tera  create_thread.tera  index.html.tera  index.tera  macros.tera  person.tera  thread.tera
