[package]
name = "rustboard"
version = "0.1.0"
authors = ["mxr <eetu.kivelae@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
serde_json = "1.0"
serde = "1.0"
dgraph = "0.4"

[dependencies.rocket_contrib]
version = "0.4.7"
default-features = false
features = ["json", "tera_templates"]