[package]
name = "rustboard"
version = "0.1.0"
authors = ["mxr <eetu.kivelae@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket" }
serde_json = "1.0"
serde = "1.0"
dgraph = "0.4"
rand = "0.8.3"

rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket", default-features = false, features = ["json", "tera_templates"] }